# RestServer

./: CMakeLists.txt  README.md  RestEndpoint.cpp  RestEndpoint.hpp  app.cpp  main.cpp
Authorization/: Authorization.cpp  Authorization.hpp  AuthorizationIf.hpp
Controllers/: Controller.cpp  Controller.hpp  ControllerIf.hpp
Database/: DBManagerIf.hpp  FakeDB.cpp  FakeDB.hpp
Protocols/: sc.proto
Services/: HelloWordlService.cpp  HelloWorldService.cpp  HelloWorldService.hpp  ServiceFactory.hpp  ServiceFactoryIf.hpp  ServiceIf.hpp  ServiceManager.cpp  ServiceManager.hpp  ServiceManagerIf.hpp  Task.hpp
Utils/: FactoryFacade.cpp  FactoryFacade.hpp
